# opentelemetry-system-metrics

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
examples/otlp-tokio-metrics/: Cargo.toml  main.rs
examples/otlp-tokio-metrics/src/: main.rs
examples/stdout-tokio-metrics/: Cargo.toml  main.rs
examples/stdout-tokio-metrics/src/: main.rs
examples/tokio-metrics/: Cargo.toml
python/: Cargo.toml  long_test.py  pyproject.toml  simple_test.py  test.py
python/src/: lib.rs
src/: lib.rs
