
[package]
name = "opentelemetry-system-metrics"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "System metric export through Opentelemetry"
repository = "https://github.com/haixuanTao/opentelemetry-system-metrics"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opentelemetry = { version = "0.27.1", features = ["metrics"] }
sysinfo = "0.29"
indexmap = "1.8"
nvml-wrapper = "0.9.0"
eyre = "0.6.8"
tracing = "0.1.40"

[dev-dependencies]
opentelemetry_sdk = { version = "0.27.1", features = ["rt-tokio", "metrics"] }
futures = "0.3.12"
tokio = { version = "1.17.0", features = ["full"] }
opentelemetry-otlp = { version = "0.27.0", features = ["tonic", "metrics"] }
eyre = "0.6.8"
opentelemetry-stdout = { version = "0.27.0", features = ["metrics"] }

[[example]]
name = "otlp-tokio-metrics"
path = "examples/otlp-tokio-metrics/main.rs"

[[example]]
name = "stdout-tokio-metrics"
path = "examples/stdout-tokio-metrics/main.rs"
