
[package]
name = "opentelemetry-system-metrics"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
description = "System metric export through Opentelemetry"
repository = "https://github.com/haixuanTao/opentelemetry-system-metrics"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opentelemetry = { version = "0.28.0", features = ["metrics"] }
sysinfo = "0.33.1"
indexmap = "2.8"
nvml-wrapper = "0.10.0"
eyre = "0.6.8"
tracing = "0.1.40"
tokio = { version = "1.17.0", features = [
    "rt",
    "rt-multi-thread",
    "time",
    "macros",
] }

[dev-dependencies]
opentelemetry_sdk = { version = "0.28.0", features = ["rt-tokio", "metrics"] }
futures = "0.3.12"
opentelemetry-otlp = { version = "0.28.0", features = [
    "tonic",
    "metrics",
    "grpc-tonic",
] }
eyre = "0.6.8"
opentelemetry-stdout = { version = "0.28.0", features = ["metrics"] }

[[example]]
name = "otlp-tokio-metrics"
path = "examples/otlp-tokio-metrics/main.rs"

[[example]]
name = "stdout-tokio-metrics"
path = "examples/stdout-tokio-metrics/main.rs"
