[package]
name = "opentelemetry-system-metrics"
version = "0.31.0"
edition = "2021"
license = "Apache-2.0"
description = "System metric export through Opentelemetry"
repository = "https://github.com/haixuanTao/opentelemetry-system-metrics"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
gpu = ["nvml-wrapper"]

[dependencies]
opentelemetry = { version = "0.31", features = ["metrics"] }
sysinfo = "0.35"
nvml-wrapper = { version = "0.11.0", optional = true }
eyre = "0.6.12"
tracing = "0.1.41"
tokio = { version = "1.44.2", features = [
    "rt",
    "rt-multi-thread",
    "time",
    "macros",
] }

[dev-dependencies]
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio", "metrics"] }
opentelemetry-otlp = { version = "0.31", features = [
    "tonic",
    "metrics",
    "grpc-tonic",
] }
eyre = "0.6.12"
opentelemetry-stdout = { version = "0.31", features = ["metrics"] }

[[example]]
name = "otlp-tokio-metrics"
path = "examples/otlp-tokio-metrics/main.rs"

[[example]]
name = "stdout-tokio-metrics"
path = "examples/stdout-tokio-metrics/main.rs"
