[package]
name = "otlp-tokio-metrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opentelemetry = { git="https://github.com/open-telemetry/opentelemetry-rust", features = ["rt-tokio", "metrics"] }
opentelemetry-otlp = { git="https://github.com/open-telemetry/opentelemetry-rust", features = ["tonic", "metrics"]  } 
opentelemetry-system-metrics = { path="../../" }
futures = "0.3.12"
tokio = { version="1.17.0", features=["full"]}
sysinfo = { git="https://github.com/haixuanTao/sysinfo" }